objects/LLC_BI__Sensitivity_Analysis__c.object
<CustomObject>
    <description>The Sensitivity Analysis object stores details that are used for the calculation of commercial real estate related financial indicators. The fields on this object enable users to perform sensitivity analysis on specific variables within the context of the CRE Analysis application.</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the underwriting bundle.</description>
        <label>Bundle</label>
        <referenceTo>LLC_BI__Underwriting_Bundle__c</referenceTo>
        <relationshipLabel>Sensitivity Analysis</relationshipLabel>
        <relationshipName>Sensitivity_Analysis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Collapsed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, the Single Variate or Multi-Variate table will collapse. If not selected, then the table will not be collapsed.</description>
        <label>Is Collapsed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It must be manually populated. When enabled, the Sensitivity Analysis is treated as a template and can be used to clone additional Sensitivity Analysis. When disabled, it cannot be used to clone additional Sensitivity Analysis. If its parent &quot;LLC_BI_Underwriting_Bundle_c&quot; is marked as a template, then the Sensitivity Analysis is also a template. By default, this is disabled.</description>
        <label>Is Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Output_1_Display_Type__c</fullName>
        <defaultValue>&quot;String&quot;</defaultValue>
        <description>Controls the formatting of the 1st output in sensitivity analysis. This is the bottom value in multi-variate cells, and the third column in single-variate tables.</description>
        <label>Output 1 Display Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LLC_BI__Sensitivity_Analysis_Display_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Output_1_Formula__c</fullName>
        <description>Formula that determines the values in the cells for either Single Variate or Multi-Variate. This is the bottom value in multi-variate cells, and the third column in single-variate tables.</description>
        <label>Output 1 Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Output_1_Name__c</fullName>
        <description>Column Headers in Single Variate Table or ratio key names in Multi-Variate Tables. This is the bottom label in the multi-variate legend, and the third column header in single-variate tables.</description>
        <label>Output 1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Output_2_Display_Type__c</fullName>
        <defaultValue>&quot;String&quot;</defaultValue>
        <description>Controls the formatting of the 2nd output in sensitivity analysis. This is the second-to-last value in multi-variate cells, and the fourth column in single-variate tables.</description>
        <label>Output 2 Display Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LLC_BI__Sensitivity_Analysis_Display_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Output_2_Formula__c</fullName>
        <description>Formula that determines the values in the cells for either Single Variate or Multi-Variate. This is the second-to-last value in multi-variate cells, and the fourth column in single-variate tables.</description>
        <label>Output 2 Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Output_2_Name__c</fullName>
        <description>Column Headers in Single Variate Table or ratio key names in Multi-Variate Tables. This is the second-to-last label in the multi-variate legend, and the fourth column header in single-variate tables.</description>
        <label>Output 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Output_3_Display_Type__c</fullName>
        <defaultValue>&quot;String&quot;</defaultValue>
        <description>Controls the formatting of the 3rd output in sensitivity analysis. This is the third-to-last value in multi-variate cells, and the fifth column in single-variate tables.</description>
        <label>Output 3 Display Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LLC_BI__Sensitivity_Analysis_Display_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Output_3_Formula__c</fullName>
        <description>Formula that determines the values in the cells for either Single Variate or Multi-Variate. This is the third-to-last value in multi-variate cells, and the fifth column in single-variate tables.</description>
        <label>Output 3 Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Output_3_Name__c</fullName>
        <description>Column Headers in Single Variate Table or ratio key names in Multi-Variate Tables. This is the third-to-last label in the multi-variate legend, and the fifth column header in single-variate tables.</description>
        <label>Output 3 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Output_A_Display_Type__c</fullName>
        <defaultValue>&quot;String&quot;</defaultValue>
        <description>Controls the formatting of the adjusted variable A. Likely always Percent.</description>
        <label>Output A Display Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LLC_BI__Sensitivity_Analysis_Display_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Output_A_Formula__c</fullName>
        <description>Formula that determines the value of the Variable A adjusted by the user input.</description>
        <label>Output A Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Output_A_Name__c</fullName>
        <description>Column header for the adjusted variable value in single-variate only.</description>
        <label>Output A Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Output_B_Display_Type__c</fullName>
        <defaultValue>&quot;String&quot;</defaultValue>
        <description>Controls the formatting of the adjusted variable B. Probably always percent</description>
        <label>Output B Display Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LLC_BI__Sensitivity_Analysis_Display_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Output_B_Formula__c</fullName>
        <description>Formula that determines the value of the Variable B adjusted by the user input.</description>
        <label>Output B Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Variable_A_Direction__c</fullName>
        <description>Notates that Variable A is displayed on the Y-Axis</description>
        <label>Variable A Direction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Variable_A_Increments__c</fullName>
        <description>Will be used for Single Variate and Multi-Variate. Used in calculations for analysis.</description>
        <label>Variable A Increments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Variable_A_Name__c</fullName>
        <description>Variable can be the only variable or it can be 1 of the 2 variables used in Multi-Variate Analysis.</description>
        <label>Variable A Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Variable_B_Direction__c</fullName>
        <description>Notates that Variable B is displayed on the X-Axis</description>
        <label>Variable B Direction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Variable_B_Increments__c</fullName>
        <description>Will only be used in Multi Variate. Used in calculations for analysis</description>
        <label>Variable B Increments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Variable_B_Name__c</fullName>
        <description>One of the two variables used in Multi-Variate Analysis.</description>
        <label>Variable B Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>Unique key for this object.</description>
        <externalId>true</externalId>
        <label>Lookup Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Sensitivity Analysis</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Sensitivity Analysis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sensitivity Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>